--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Name | Student Developer</title>
+  <title>Anjani Shaw | Student Developer</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -24,10 +24,10 @@
     <section class="hero reveal">
       <p class="badge">Girls Who Code • Portfolio Build</p>
       <h1>
-        Hi, I’m <span class="gradient">Your Name</span> 👋
+        Hi, I’m <span class="gradient">Anjani Shaw </span> 👋
       </h1>
       <p class="subtitle">
-        I build clean, useful things — websites, apps, and little tools that solve real problems.
+        I build as an outlet for my creativity — websites, apps, and tools that solve real problems.
       </p>
 
       <div class="cta">
