--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section id="about" class="card reveal">
       <h2>About</h2>
       <p>
-        I’m a student interested in software, AI, and building things that make life easier.
+        I’m a student passionate about coding. Although, AI, and building things that make life easier.
         This site is my “resume, but cooler.”
       </p>
       <p class="muted">
