--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <div class="contactRow">
         <div class="contactBox">
           <p class="label">Email</p>
-          <p class="value" id="emailText">yourname@email.com</p>
+          <p class="value" id="emailText">25shawanjani@gmail.com</p>
         </div>
         <div class="contactBox">
           <p class="label">Links</p>
